[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/Asteroid/BrownAsteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Audio/heart_beat.ogg" type="AudioStream" id=2]
[ext_resource path="res://src/StarField/StarfieldBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Menu/ConfigMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Game.gd" type="Script" id=7]
[ext_resource path="res://src/StarField/StarField.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UI/Menu/Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/UI/Menu/CreditsMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/UI/MessageControl.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UI/Score/ScoreMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/UI/Score/ScoreSendMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Asteroid/GrayAsteroid.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Asteroid/BlackAsteroid.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Asteroid/BigAsteroid.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Asteroid/SmallAsteroid0.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Asteroid/SmallAsteroid1.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Asteroid/SmallAsteroid5.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Asteroid/SmallAsteroid3.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Asteroid/SmallAsteroid4.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Asteroid/SmallAsteroid2.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/Asteroid/SmallAsteroid6.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/UI/PauseMenu.tscn" type="PackedScene" id=24]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 192, -64, 0, 0, 0, 0, 1024, -64, 0, 0, 0, 0, 1024, 480, 0, 0, 0, 0, 192, 480 )
}

[node name="Game" type="Node"]
script = ExtResource( 7 )
asteroid_scenes = [ ExtResource( 15 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 23 ) ]

[node name="StarfieldParallax" parent="." instance=ExtResource( 3 )]

[node name="Starfield" parent="." instance=ExtResource( 8 )]
emitting = false

[node name="HUD" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AsteroidPath" type="Path2D" parent="."]
position = Vector2( -166.769, 25.8824 )
scale = Vector2( 1.20192, 1.02941 )
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( 192, -64 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 128, 240 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 14.0
bus = "Music"

[node name="MessageControl" parent="." instance=ExtResource( 11 )]
visible = false
margin_left = 416.0
margin_top = 64.0
margin_right = 608.0
margin_bottom = 176.0

[node name="Menu" parent="." instance=ExtResource( 9 )]
pause_mode = 2

[node name="Config" parent="Menu" instance=ExtResource( 6 )]
visible = false
margin_left = -248.0
margin_top = 0.0
margin_right = 648.0
margin_bottom = 384.0

[node name="Credits" parent="Menu" instance=ExtResource( 10 )]
visible = false
margin_left = -128.0
margin_top = 0.0
margin_right = 512.0
margin_bottom = 384.0

[node name="Scoreboard" parent="Menu" instance=ExtResource( 12 )]
visible = false
margin_left = -128.0
margin_top = 0.0
margin_right = 512.0
margin_bottom = 384.0

[node name="ScoreSend" parent="Menu" instance=ExtResource( 13 )]
visible = false
margin_left = -128.0
margin_top = 112.0
margin_right = 512.0
margin_bottom = 305.0

[node name="PauseMenu" parent="." instance=ExtResource( 24 )]
pause_mode = 2
visible = false
margin_top = 176.0
margin_bottom = 304.0

[connection signal="paused" from="HUD" to="." method="_on_HUD_paused"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="hp_updated" from="Player" to="." method="_on_Player_hp_updated"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="configuration_opened" from="Menu" to="." method="_on_Menu_configuration_opened"]
[connection signal="credits_opened" from="Menu" to="." method="_on_Menu_credits_opened"]
[connection signal="game_started" from="Menu" to="." method="_on_Menu_game_started"]
[connection signal="scoreboard_opened" from="Menu" to="." method="_on_Menu_scoreboard_opened"]
[connection signal="difficulty_changed" from="Menu/Config" to="." method="_on_Config_difficulty_changed"]
[connection signal="dynamic_background_changed" from="Menu/Config" to="." method="_on_Config_dynamic_background_changed"]
[connection signal="hide" from="Menu/Config" to="." method="_on_Config_hide"]
[connection signal="joystick_changed" from="Menu/Config" to="." method="_on_Config_joystick_changed"]
[connection signal="sensitivity_changed" from="Menu/Config" to="." method="_on_Config_sensitivity_changed"]
[connection signal="hide" from="Menu/Credits" to="." method="_on_Credits_hide"]
[connection signal="hide" from="Menu/Scoreboard" to="." method="_on_Scoreboard_hide"]
[connection signal="hide" from="Menu/ScoreSend" to="." method="_on_ScoreSend_hide"]
[connection signal="score_registered" from="Menu/ScoreSend" to="." method="_on_ScoreSend_score_registered"]
[connection signal="quited" from="PauseMenu" to="." method="_on_PauseMenu_quited"]
[connection signal="resumed" from="PauseMenu" to="." method="_on_PauseMenu_resumed"]
